perubahan file index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beranda</title>
+    <title>Home</title>
   </head>
   <body>
     <h1>Selamat Datang di Website Saya!</h1>
